@@ -12,14 +12,12 @@ PGM=${ARCH}/display_cpu.exe
 MANAGERS=all
 
 # C source names
-CSRCS = test.c
-COBJS = $(CSRCS:%.c=${ARCH}/%.o)
+SRCS = test.c
+OBJS = $(SRCS:%.[cS]=${ARCH}/%.o)
 
 include $(RTEMS_MAKEFILE_PATH)/Makefile.inc
 include $(RTEMS_CUSTOM)
 include $(PROJECT_ROOT)/make/leaf.cfg
-
-OBJS= $(COBJS) $(CXXOBJS) $(ASOBJS)
 
 all:    ${ARCH} $(PGM)
 
